--- a/src/index.css
+++ b/src/index.css
@@ -130,3 +130,141 @@ html {
   width: 40px;
   transform: translateX(-2px) translateY(-9px) rotate(-45deg);
 }
+
+/***************** ローディング *****************/
+
+.wrapper {
+  width: 150px;
+  height: 20px;
+  margin: 0 auto;
+  left: 50%;
+  bottom: 0;
+  transform: translate(0%, -100%);
+
+  @media (min-width: 767px) {
+    width: 200px;
+    height: 60px;
+  }
+}
+
+.circle {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  border-radius: 50%;
+  background-color: #606060;
+  left: 20%;
+  transform-origin: 50%;
+  animation: circle 0.5s alternate infinite ease;
+
+  @media (min-width: 767px) {
+    width: 20px;
+    height: 20px;
+  }
+}
+
+@keyframes circle {
+  0% {
+    top: 40px;
+    height: 5px;
+    border-radius: 50px 50px 25px 25px;
+    transform: scaleX(1.7);
+  }
+  40% {
+    height: 10px;
+    border-radius: 50%;
+    transform: scaleX(1);
+  }
+  100% {
+    top: 0%;
+  }
+}
+
+@media (min-width: 767px) {
+  @keyframes circle {
+    0% {
+      top: 60px;
+      height: 5px;
+      border-radius: 50px 50px 25px 25px;
+      transform: scaleX(1.7);
+    }
+    40% {
+      height: 20px;
+      border-radius: 50%;
+      transform: scaleX(1);
+    }
+    100% {
+      top: 0%;
+    }
+  }
+}
+
+.circle:nth-child(2) {
+  left: 45%;
+  animation-delay: 0.2s;
+}
+
+.circle:nth-child(3) {
+  left: auto;
+  right: 20%;
+  animation-delay: 0.3s;
+}
+
+.circleShadow {
+  width: 10px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 42px;
+  transform-origin: 50%;
+  z-index: -1;
+  left: 20%;
+  filter: blur(1px);
+  animation: shadow 0.5s alternate infinite ease;
+
+  @media (min-width: 767px) {
+    top: 62px;
+    width: 20px;
+  }
+}
+
+@keyframes shadow {
+  0% {
+    transform: scaleX(1.5);
+  }
+  40% {
+    transform: scaleX(1);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scaleX(0.2);
+    opacity: 0.4;
+  }
+}
+
+.circleShadow:nth-child(4) {
+  left: 45%;
+  animation-delay: 0.2s;
+}
+
+.circleShadow:nth-child(5) {
+  left: auto;
+  right: 20%;
+  animation-delay: 0.3s;
+}
+
+.wrapper span {
+  position: absolute;
+  top: 60px;
+  font-size: 16px;
+  letter-spacing: 3px;
+  color: #606060;
+  left: 20%;
+
+  @media (min-width: 767px) {
+    top: 75px;
+    letter-spacing: 8px;
+    font-size: 20px;
+  }
+}
